--- a/contacto.html
+++ b/contacto.html
@@ -32,6 +32,12 @@
                         </a>
                     </div>
 
+                    <input type="checkbox" id="check">
+                    <label for="check" class="barBtn">
+                        <i class="fa fa-bars"></i>
+
+                    </label>
+
                 <ul class="navMenuItems" >
                 
                 <li><i class="fa-solid fa-fire"></i><a href="./index.html">Popular</a></li>
@@ -50,9 +56,7 @@
                     </div>
                 </div>
 
-                <span class="btnMenu">
-                    <i class="fa fa-bars"></i>
-                </span>
+                
                 <span class="buyBtn">
                     <i class="fa-solid fa-cart-shopping"></i>
                 </span>
