commit carpeta ordenadas y pre-sass

--- a/Pages/ofertas.html
+++ b/Pages/ofertas.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MangaFreaks</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" v />
-    <script src="https://kit.fontawesome.com/71757bdbd3.js" crossorigin="anonymous"></script>
+    
+    <head>
 
-</head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width">
+        <title>MangaFreaks</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" v />
+        <script src="https://kit.fontawesome.com/71757bdbd3.js" crossorigin="anonymous"></script>
+    
+    </head>
 
 <body class="gridContainerOfertas">
     <div class="descuentoTituloCont">
@@ -30,7 +32,7 @@
             <nav class="navMenu">
                 <nav class="navMenu">
                     <div class="Logo">
-                        <a href="./index.html"><img class="LogoImagen" src="./Imagenes/LogoPng.png" width="150">
+                        <a href="./index.html"><img class="LogoImagen" src="../Imagenes/LogoPng.png" width="150">
 
                         </a>
                     </div>
@@ -43,7 +45,7 @@
 
                     <ul class="navMenuItems">
 
-                        <li><i class="fa-solid fa-fire"></i><a href="./index.html">Popular</a></li>
+                        <li><i class="fa-solid fa-fire"></i><a href="../index.html">Popular</a></li>
                         <li><i class="fa-solid fa-book-skull"></i><a href="./mangas.html">Mangas</a></li>
                         <li><i class="fa-solid fa-book"></i><a href="./comics.html">Cómics</a></li>
                         <li><i class="fa-solid fa-percent"></i><a href="./ofertas.html">Ofertas</a></li>
@@ -74,7 +76,7 @@
     <section class="contenidoContenedor">
         <div class="contenido">
             <div class="contenidoImagen">
-                <img src="./Imagenes/hulkOf.jpg" width="200">
+                <img src="../Imagenes/hulkOf.jpg" width="200">
             </div>
             <div class="contenidoInfo">
                 <h2>Hulk Monstruo</h2>
@@ -94,7 +96,7 @@
 
         <div class="contenido">
             <div class="contenidoImagen">
-                <img src="./Imagenes/Tarzán.jpg" width="200">
+                <img src="../Imagenes/Tarzán.jpg" width="200">
             </div>
             <div class="contenidoInfo">
                 <h2>Clásicos del Cómic: Tarzán</h2>
@@ -114,7 +116,7 @@
 
         <div class="contenido">
             <div class="contenidoImagen">
-                <img src="./Imagenes/jujustu0.jpg" width="200">
+                <img src="../Imagenes/jujustu0.jpg" width="200">
             </div>
             <div class="contenidoInfo">
                 <h2>Jujutsu Kaisen 00</h2>
@@ -134,7 +136,7 @@
 
         <div class="contenido">
             <div class="contenidoImagen">
-                <img src="./Imagenes/chain3.jpg" width="200">
+                <img src="../Imagenes/chain3.jpg" width="200">
             </div>
             <div class="contenidoInfo">
                 <h2>Chainsaw Man 03</h2>
@@ -154,7 +156,7 @@
 
         <div class="contenido">
             <div class="contenidoImagen">
-                <img src="./Imagenes/monster.jpg" width="200">
+                <img src="../Imagenes/monster.jpg" width="200">
             </div>
             <div class="contenidoInfo">
                 <h2>Monster 01</h2>
@@ -174,7 +176,7 @@
 
         <div class="contenido">
             <div class="contenidoImagen">
-                <img src="./Imagenes/darling.jpg" width="200">
+                <img src="../Imagenes/darling.jpg" width="200">
             </div>
             <div class="contenidoInfo">
                 <h2>Darling in the Franxx</h2>
@@ -194,7 +196,7 @@
 
         <div class="contenido">
             <div class="contenidoImagen">
-                <img src="./Imagenes/dragonball7.jpg" width="200">
+                <img src="../Imagenes/dragonball7.jpg" width="200">
             </div>
             <div class="contenidoInfo">
                 <h2>Dragon Ball Super 07</h2>
@@ -214,7 +216,7 @@
 
         <div class="contenido">
             <div class="contenidoImagen">
-                <img src="./Imagenes/snk5.jpg" width="200">
+                <img src="../Imagenes/snk5.jpg" width="200">
             </div>
             <div class="contenidoInfo">
                 <h2>Attack on Titan 05</h2>
@@ -234,7 +236,7 @@
 
         <div class="contenido">
             <div class="contenidoImagen">
-                <img src="./Imagenes/beatless.jpg" width="200">
+                <img src="../Imagenes/beatless.jpg" width="200">
             </div>
             <div class="contenidoInfo">
                 <h2>Beatless 01</h2>
@@ -254,7 +256,7 @@
 
         <div class="contenido">
             <div class="contenidoImagen">
-                <img src="./Imagenes/porco.jpg" width="200">
+                <img src="../Imagenes/porco.jpg" width="200">
             </div>
             <div class="contenidoInfo">
                 <h2>Porco Rosso</h2>
@@ -335,12 +337,12 @@
             <h3>
                 <p>MangaFreaks</p>
                 <span>
-                    <img class="LogoImagen" src="./Imagenes/LogoPng.png" width="75">
+                    <img class="LogoImagen" src="../Imagenes/LogoPng.png" width="75">
                 </span>
             </h3>
 
             <p class="footerLinks">
-                <a href="./index.html">Popular</a>
+                <a href="../index.html">Popular</a>
 
                 <a href="./mangas.html">Mangas</a>
 
