--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MangaFreaks</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" v />
-    <script src="https://kit.fontawesome.com/71757bdbd3.js" crossorigin="anonymous"></script>
+    
+    <head>
 
-</head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width">
+        <title>MangaFreaks</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" v />
+        <script src="https://kit.fontawesome.com/71757bdbd3.js" crossorigin="anonymous"></script>
+    
+    </head>
 
 
 <body class="bodycontact">
@@ -32,7 +34,7 @@
             <nav class="navMenu">
                 <nav class="navMenu">
                     <div class="Logo">
-                        <a href="./index.html"><img class="LogoImagen" src="./Imagenes/LogoPng.png" width="150">
+                        <a href="./index.html"><img class="LogoImagen" src="../Imagenes/LogoPng.png" width="150">
 
                         </a>
                     </div>
@@ -45,7 +47,7 @@
 
                     <ul class="navMenuItems">
 
-                        <li><i class="fa-solid fa-fire"></i><a href="./index.html">Popular</a></li>
+                        <li><i class="fa-solid fa-fire"></i><a href="../index.html">Popular</a></li>
                         <li><i class="fa-solid fa-book-skull"></i><a href="./mangas.html">Mangas</a></li>
                         <li><i class="fa-solid fa-book"></i><a href="./comics.html">Cómics</a></li>
                         <li><i class="fa-solid fa-percent"></i><a href="./ofertas.html">Ofertas</a></li>
@@ -179,12 +181,12 @@
             <h3>
                 <p>MangaFreaks</p>
                 <span>
-                    <img class="LogoImagen" src="./Imagenes/LogoPng.png" width="75">
+                    <img class="LogoImagen" src="../Imagenes/LogoPng.png" width="75">
                 </span>
             </h3>
 
             <p class="footerLinks">
-                <a href="./index.html">Popular</a>
+                <a href="../index.html">Popular</a>
 
                 <a href="./mangas.html">Mangas</a>
 
