--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>MangaFreaks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
@@ -45,10 +45,10 @@
                     <ul class="navMenuItems" data-aos="fade-left" data-aos-once="true" data-aos-delay="20">
 
                         <li><i class="fa-solid fa-fire"></i><a href="./index.html">Popular</a></li>
-                        <li><i class="fa-solid fa-book-skull"></i><a href="./mangas.html">Mangas</a></li>
-                        <li><i class="fa-solid fa-book"></i><a href="./comics.html">Cómics</a></li>
-                        <li><i class="fa-solid fa-percent"></i><a href="./ofertas.html">Ofertas</a></li>
-                        <li><i class="fa-solid fa-id-card"></i><a href="./contacto.html">Contacto</a></li>
+                        <li><i class="fa-solid fa-book-skull"></i><a href="./Pages/mangas.html">Mangas</a></li>
+                        <li><i class="fa-solid fa-book"></i><a href="./Pages/comics.html">Cómics</a></li>
+                        <li><i class="fa-solid fa-percent"></i><a href="./Pages/ofertas.html">Ofertas</a></li>
+                        <li><i class="fa-solid fa-id-card"></i><a href="./Pages/contacto.html">Contacto</a></li>
 
 
                     </ul>
@@ -420,13 +420,13 @@
             <p class="footerLinks">
                 <a href="./index.html">Popular</a>
 
-                <a href="./mangas.html">Mangas</a>
+                <a href="./Pages/mangas.html">Mangas</a>
 
-                <a href="./comics.html">Cómics</a>
+                <a href="./Pages/comics.html">Cómics</a>
 
-                <a href="./ofertas.html">Ofertas</a>
+                <a href="./Pages/ofertas.html">Ofertas</a>
 
-                <a href="./contacto.html">Contacto</a>
+                <a href="./Pages/contacto.html">Contacto</a>
             </p>
 
             <p class="footerCompName">Manga Freaks © 2022</p>
