Aplicando Sass al proyecto

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>MangaFreaks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
@@ -332,7 +332,7 @@
 
     <section class="bannerHome" data-aos-duration="600" data-aos="fade-up" data-aos-once="true">
         <div class="bannerContainer">
-            <a href="mangas.html">
+            <a href="./Pages/mangas.html">
                 <div class="bannerRow">
                     <div class="banner1">
                         <img src="./Imagenes/animebanner.webp" width="" class="imagenBanner">
@@ -347,7 +347,7 @@
                     </div>
             </a>
         </div>
-        <a href="comics.html">
+        <a href="./Pages/comics.html">
             <div class="bannerRow">
                 <div class="banner1">
                     <img src="./Imagenes/banner-marvel.webp" width="" class="imagenBanner">
@@ -361,7 +361,7 @@
                 </div>
         </a>
         </div>
-        <a href="ofertas.html">
+        <a href="./Pages/ofertas.html">
             <div class="bannerRow">
                 <div class="banner1">
                     <img src="./Imagenes/ofertas.jpg" height="150" class="imagenBanner">
