Errores areglados html, mejora de codigo y reconstruccion de nav mobile

--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -15,61 +15,62 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" v />
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
         <script src="https://kit.fontawesome.com/71757bdbd3.js" crossorigin="anonymous"></script>
     
     </head>
 
 
 <body class="bodycontact">
-
     <div class="descuentoTituloCont">
-        <h3 class="descuentoTitulo">
+        <div class="descuentoTitulo">
             <p class="descuentoTexto">15% OFF PAGANDO EN EFECTIVO/TRANSFERENCIA</p>
 
-        </h3>
+        </div>
     </div>
     <header class="header">
         <div class="navContainer">
             <nav class="navMenu">
-                <nav class="navMenu">
-                    <div class="Logo">
-                        <a href="./index.html"><img class="LogoImagen" src="../Imagenes/LogoPng.png" width="150">
 
-                        </a>
+                <div class="Logo">
+                    <a href="./index.html"><img class="LogoImagen" src="../Imagenes/LogoPng.png" alt="Logo" width="150">
+
+                    </a>
+                </div>
+                <input type="checkbox" id="check">
+                <label for="check" class="barBtn">
+                    <i class="fa fa-bars"></i>
+
+                </label>
+
+
+                <ul class="navMenuItems">
+
+                    <li class="primero"><i class="fa-solid fa-fire"></i><a href="../index.html">Popular</a></li>
+                    <li><i class="fa-solid fa-book-skull"></i><a href="./mangas.html">Mangas</a></li>
+                    <li><i class="fa-solid fa-book"></i><a href="./comics.html">Cómics</a></li>
+                    <li><i class="fa-solid fa-percent"></i><a href="./ofertas.html">Ofertas</a></li>
+                    <li><i class="fa-solid fa-id-card"></i><a href="./contacto.html">Contacto</a></li>
+
+
+                </ul>
+
+                <div class="searchBar">
+                    <input type="text" placeholder="¿Qué estás buscando?" required>
+                    <div class="searchBarBtn">
+                        <i class="fa-solid fa-magnifying-glass"></i>
                     </div>
-                    <input type="checkbox" id="check">
-                    <label for="check" class="barBtn">
-                        <i class="fa fa-bars"></i>
+                </div>
 
-                    </label>
-
-
-                    <ul class="navMenuItems">
-
-                        <li><i class="fa-solid fa-fire"></i><a href="../index.html">Popular</a></li>
-                        <li><i class="fa-solid fa-book-skull"></i><a href="./mangas.html">Mangas</a></li>
-                        <li><i class="fa-solid fa-book"></i><a href="./comics.html">Cómics</a></li>
-                        <li><i class="fa-solid fa-percent"></i><a href="./ofertas.html">Ofertas</a></li>
-                        <li><i class="fa-solid fa-id-card"></i><a href="./contacto.html">Contacto</a></li>
+                <span class="buyBtn">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </span>
 
 
-                    </ul>
+                    <span class="userLog" onclick="myFunction()">
+                        <i class="fa-solid fa-user-ninja"></i>
                     </span>
-                    <div class="searchBar">
-                        <input type="text" placeholder="¿Qué estás buscando?" required>
-                        <div class="searchBarBtn">
-                            <i class="fa-solid fa-magnifying-glass"></i>
-                        </div>
-                    </div>
-
-                    <span class="buyBtn">
-                        <i class="fa-solid fa-cart-shopping"></i>
-                        </label>
-
-                        <span class="userLog" onclick="myFunction()">
-                            <i class="fa-solid fa-user-ninja"></i>
-                </nav>
+            </nav>
         </div>
     </header>
     <h2 class="h21">
@@ -126,12 +127,6 @@
         </div>
     </main>
 
-
-
-
-
-
-    </section>
     <section class="subHome">
         <div class="subHomeContainer">
             <div class="subHomeContainerCentro">
@@ -142,38 +137,16 @@
                             <p>¿Quieres recibir nuestras ofertas? ¡Registrate ya mismo y comenzá a disfrutarlas!</p>
                         </div>
                         <div class="subContenido2">
-                            <input type="" id="email" class="emailLargo" autocorrect="off" autocapitalize="off"
+                            <input type="" id="subemail" class="emailLargo" autocorrect="off" autocapitalize="off"
                                 name="email" placeholder="Email" aria-label="Email">
                             <input type="submit" name="contact" class="btnNew" value="Enviar">
-
-
-
                         </div>
-
                     </div>
-
-
-
-
                 </div>
-
-
-
-
-
             </div>
-
-
-
-
-
-        </div>
-
-
-
-
         </div>
     </section>
+
     <footer class="footer">
 
         <div class="footerLeft">
@@ -181,7 +154,7 @@
             <h3>
                 <p>MangaFreaks</p>
                 <span>
-                    <img class="LogoImagen" src="../Imagenes/LogoPng.png" width="75">
+                    <img class="LogoImagenFooter" src="../Imagenes/LogoPng.png" width="75" alt="Logo">
                 </span>
             </h3>
 
@@ -223,8 +196,7 @@
 
             <p class="footerAbout">
                 <span>Sobre nuestra empresa</span>
-                Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus
-                vehicula sit amet.
+                MangaFreaks es nueva tienda de mangas y comics, contamos con una unica sede ubicada en Otamendi 90.
             </p>
 
             <div class="footerIcons">
@@ -240,11 +212,12 @@
 
 
     </footer>
+
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
-    </script>
+    
     <script>
         AOS.init({
             disable: 'mobile'
