--- a/Pages/comics.html
+++ b/Pages/comics.html
@@ -71,8 +71,7 @@
             </nav>
         </div>
     </header>
-    <h2 class="h21">
-        <p class="seleccion">Cómics</p>
+    <h2 class="seleccion h21">Cómics</span>
     </h2>
 
     <section class="selector">
