--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -73,8 +73,7 @@
             </nav>
         </div>
     </header>
-    <h2 class="h21">
-        <p class="seleccion"><span class="seleccionContacto">Contacto</span></p>
+    <h2 class="seleccion h21">Contacto</span>
     </h2>
     <main class="formularioMain" data-aos="fade-up" data-aos-once="true" data-aos-delay="200" data-aos-duration="1000">
         <div class="container-fluid mx-auto">
