--- a/Pages/mangas.html
+++ b/Pages/mangas.html
@@ -72,8 +72,7 @@
             </nav>
         </div>
     </header>
-    <h2 class="h21">
-        <p class="seleccion">Mangas</p>
+    <h2 class="seleccion h21">Mangas</span>
     </h2>
 
     <section class="selector">
