--- a/Pages/ofertas.html
+++ b/Pages/ofertas.html
@@ -72,8 +72,7 @@
             </nav>
         </div>
     </header>
-    <h2 class="h21">
-        <p class="seleccion">Ofertas</p>
+    <h2 class="seleccion h21">Ofertas</span>
     </h2>
     <section class="contenidoContenedor">
         <div class="contenido">
