--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="descuentoTituloCont">
         <div class="descuentoTitulo" data-aos="fade-down" data-aos-once="true" data-aos-delay="20" data-aos="fade-down"
             data-aos-easing="linear" data-aos-duration="1000">
-            <p class="descuentoTexto">15% OFF PAGANDO EN EFECTIVO/TRANSFERENCIA</p>
+            <p class="descuentoTexto">15% DESCUENTO PAGANDO EN EFECTIVO/TRANSFERENCIA</p>
 
         </div>
     </div>
@@ -72,10 +72,9 @@
             </nav>
         </div>
     </header>
-    <h2 class="h21">
-        <p class="seleccion"><span data-aos="zoom-in" data-aos-once="true" data-aos-delay="400"
-                data-aos-duration="1000">Popular</span></p>
-    </h2>
+    <h1 class="seleccion h21"><span data-aos="zoom-in" data-aos-once="true" data-aos-delay="400"
+        data-aos-duration="1000">Mas Vendidos</span>
+    </h1>
 
 
     <main class="main1" data-aos="zoom-in" data-aos-once="true" data-aos-delay="400" data-aos-duration="1000">
@@ -159,9 +158,7 @@
             </div>
         </section>
     </main>
-    <h2 class="h22">
-        <p class="seleccion3"><span data-aos="zoom-in" data-aos-once="true" data-aos-delay="400"
-                data-aos-duration="1000">Mangas</span></p>
+    <h2 class="h22 seleccion3">Mangas
     </h2>
     <section class="main2">
         <section class="contenidoContenedor">
@@ -243,8 +240,7 @@
 
         </section>
     </section>
-    <h3 class="tituloVioleta">
-        <p class="seleccion2">Cómics</p>
+    <h3 class="tituloVioleta">Cómics
 
     </h3>
     <Section class="main3">
