--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -8,7 +8,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width">
-        <title>MangaFreaks</title>
+        <title>Contacto</title>
+        <meta name="description" content="MangaFreaks es una tienda de mangas y comics que proveé una larga selección de artículos a la venta. También tenemos para ofrecer increíbles ofertas y envíos gratis a toda Capital Federal">
+        <meta name="keywords" content="manga argentina, manga de kimetsu no yaiba, manga anime, manga comics popular, manga anime oferta, contacto, contactar">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/main.css">
@@ -22,6 +24,16 @@
 
 
 <body class="bodycontact">
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    
+    <script>
+        AOS.init({
+            disable: 'mobile'
+        });
+    </script>
     <div class="descuentoTituloCont">
         <div class="descuentoTitulo">
             <p class="descuentoTexto">15% OFF PAGANDO EN EFECTIVO/TRANSFERENCIA</p>
@@ -211,17 +223,6 @@
 
 
     </footer>
-
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
-    
-    <script>
-        AOS.init({
-            disable: 'mobile'
-        });
-    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
