--- a/Pages/ofertas.html
+++ b/Pages/ofertas.html
@@ -8,7 +8,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width">
-        <title>MangaFreaks</title>
+        <title>Ofertas</title>
+        <meta name="description" content="MangaFreaks es una tienda de mangas y comics que proveé una larga selección de artículos a la venta. También tenemos para ofrecer increíbles ofertas y envíos gratis a toda Capital Federal">
+        <meta name="keywords" content="manga argentina, manga de kimetsu no yaiba, manga anime, manga comics popular, manga anime oferta, manga comic ofertas"> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/main.css">
