TERCERA ENTREGA DEL PROYECTO FINAL

--- a/Pages/comics.html
+++ b/Pages/comics.html
@@ -28,6 +28,8 @@
 
         </div>
     </div>
+
+<!--Header-->
     <header class="header">
         <div class="navContainer">
             <nav class="navMenu">
@@ -76,6 +78,7 @@
     <h2 class="seleccion h21">Cómics</span>
     </h2>
 
+<!-- Paginación -->
     <section class="selector">
         <div class="selectorContainer">
             <div class="paginacion">
@@ -97,6 +100,10 @@
             </select>
         </div>
     </section>
+
+
+
+<!-- Main Contenido -->
     <section class="contenidoContenedorMangaLibros">
 
         <div class="contenidoMangaLibros">
@@ -519,7 +526,9 @@
             </div>
         </div>
     </section>
-    
+
+
+<!-- Sección Ofertas -->
     <section class="subHome">
         <div class="subHomeContainer">
             <div class="subHomeContainerCentro">
@@ -541,7 +550,7 @@
     </section>
 
 
-
+<!-- Footer -->
     <footer class="footer">
 
         <div class="footerLeft">
@@ -606,6 +615,8 @@
 
 
     </footer>
+
+<!-- Scripts -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
