--- a/Pages/mangas.html
+++ b/Pages/mangas.html
@@ -29,6 +29,8 @@
 
         </div>
     </div>
+
+<!--Header-->
     <header class="header">
         <div class="navContainer">
             <nav class="navMenu">
@@ -76,7 +78,7 @@
     </header>
     <h2 class="seleccion h21">Mangas</span>
     </h2>
-
+<!-- Paginación -->
     <section class="selector">
         <div class="selectorContainer">
             <div class="paginacion">
@@ -98,6 +100,8 @@
             </select>
         </div>
     </section>
+
+<!-- Main Contenido -->
     <section class="contenidoContenedorMangaLibros">
 
         <div class="contenidoMangaLibros">
@@ -520,7 +524,9 @@
             </div>
         </div>
     </section>
-    
+
+
+<!-- Sección Ofertas -->
     <section class="subHome">
         <div class="subHomeContainer">
             <div class="subHomeContainerCentro">
@@ -542,7 +548,7 @@
     </section>
 
 
-
+<!-- Footer -->
     <footer class="footer">
 
         <div class="footerLeft">
@@ -609,7 +615,7 @@
 
     </footer>
 
-    
+    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
