--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
         </div>
     </div>
+<!--Header-->
     <header class="header">
         <div class="navContainer">
             <nav class="navMenu">
@@ -75,7 +76,7 @@
     <h1 class="seleccion h21"><span>Mas Vendidos</span>
     </h1>
 
-
+<!-- Main Section -->
     <main class="main1">
         <section class="contenidoContenedor">
             <div class="contenido">
@@ -323,7 +324,7 @@
     </section>
 
 
-
+<!-- Sección Banners -->
     <section class="bannerHome">
         <div class="bannerContainer">
             <a href="./Pages/mangas.html">
@@ -371,7 +372,7 @@
         </div>
     </section>
 
-
+<!-- Sección Ofertas -->
     <section class="subHome">
         <div class="subHomeContainer">
             <div class="subHomeContainerCentro">
@@ -391,7 +392,9 @@
             </div>
         </div>
     </section>
-    
+
+
+<!-- Footer -->
     <footer class="footer">
         <div class="footerLeft">
 
@@ -456,6 +459,8 @@
 
 
     </footer>
+
+<!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
