--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -24,6 +24,7 @@
 
 
 <body class="bodycontact">
+    <!-- Scripts que necesitan cargarse primero -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
@@ -34,6 +35,9 @@
             disable: 'mobile'
         });
     </script>
+    
+
+<!-- Empiza el body -->
     <div class="descuentoTituloCont">
         <div class="descuentoTitulo">
             <p class="descuentoTexto">15% OFF PAGANDO EN EFECTIVO/TRANSFERENCIA</p>
@@ -87,6 +91,8 @@
     </header>
     <h2 class="seleccion h21">Contacto</span>
     </h2>
+
+<!-- Formulario de contacto -->
     <main class="formularioMain" data-aos="fade-up" data-aos-once="true" data-aos-delay="200" data-aos-duration="1000">
         <div class="container-fluid mx-auto">
             <div class="row d-flex justify-content-center">
@@ -137,7 +143,7 @@
             </div>
         </div>
     </main>
-
+<!-- Sección Ofertas -->
     <section class="subHome">
         <div class="subHomeContainer">
             <div class="subHomeContainerCentro">
@@ -158,6 +164,8 @@
         </div>
     </section>
 
+
+<!-- Footer -->
     <footer class="footer">
 
         <div class="footerLeft">
