--- a/Pages/ofertas.html
+++ b/Pages/ofertas.html
@@ -29,6 +29,8 @@
 
         </div>
     </div>
+
+<!--Header-->
     <header class="header">
         <div class="navContainer">
             <nav class="navMenu">
@@ -74,8 +76,10 @@
             </nav>
         </div>
     </header>
+
     <h2 class="seleccion h21">Ofertas</span>
     </h2>
+<!-- Main Contenido OFertas -->
     <section class="contenidoContenedor">
         <div class="contenido">
             <div class="contenidoImagen">
@@ -278,16 +282,7 @@
         </div>
 
 
-
-
-
-
-
-
-
-
-
-
+<!-- Sección Ofertas -->
     </section>
     <section class="subHome">
         <div class="subHomeContainer">
@@ -309,6 +304,8 @@
         </div>
     </section>
 
+
+<!-- Footer -->
     <footer class="footer">
 
         <div class="footerLeft">
@@ -374,6 +371,9 @@
 
 
     </footer>
+
+
+<!-- Scripts -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
