commit entrega final con formularios funcionales

--- a/Pages/ofertas.html
+++ b/Pages/ofertas.html
@@ -36,7 +36,7 @@
             <nav class="navMenu">
 
                 <div class="Logo">
-                    <a href="./index.html"><img class="LogoImagen" src="../Imagenes/LogoPng.png" alt="Logo" width="150">
+                    <a href="../index.html"><img class="LogoImagen" src="../Imagenes/LogoPng.png" alt="Logo" width="150">
 
                     </a>
                 </div>
@@ -280,30 +280,31 @@
                 </div>
             </div>
         </div>
+    </section>
 
 
 <!-- Sección Ofertas -->
-    </section>
-    <section class="subHome">
-        <div class="subHomeContainer">
-            <div class="subHomeContainerCentro">
-                <div class="subHomeContainerRow">
-                    <div class="subContenido">
-                        <div class="subContenido1">
-                            <h3 class="subh3">Recibí todas las ofertas</h3>
-                            <p>¿Quieres recibir nuestras ofertas? ¡Registrate ya mismo y comenzá a disfrutarlas!</p>
-                        </div>
-                        <div class="subContenido2">
-                            <input type="" id="email" class="emailLargo" autocorrect="off" autocapitalize="off"
-                                name="email" placeholder="Email" aria-label="Email">
-                            <input type="submit" name="contact" class="btnNew" value="Enviar">
-                        </div>
+<section class="subHome">
+    <div class="subHomeContainer">
+        <div class="subHomeContainerCentro">
+            <div class="subHomeContainerRow">
+                <div class="subContenido">
+                    <div class="subContenido1">
+                        <h3 class="subh3">Recibí todas las ofertas</h3>
+                        <p>¿Quieres recibir nuestras ofertas? ¡Registrate ya mismo y comenzá a disfrutarlas!</p>
+                    </div>
+                    <div class="subContenido2">
+                        <form class= "subForm" action="https://formsubmit.co/93ea4b64eb1d0c3c67ba062781ed9502" method="POST">
+                        <input type="" id="email" class="emailLargo" autocorrect="off" autocapitalize="off"
+                            name="email" placeholder="Email" aria-label="Email">
+                        <input type="submit" name="contact" class="btnNew" value="Enviar">
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-
+    </div>
+</section>
 
 <!-- Footer -->
     <footer class="footer">
@@ -360,9 +361,9 @@
 
             <div class="footerIcons">
 
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/home?lang=es" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
 
 
             </div>
