--- a/index.html
+++ b/index.html
@@ -383,9 +383,11 @@
                             <p>¿Quieres recibir nuestras ofertas? ¡Registrate ya mismo y comenzá a disfrutarlas!</p>
                         </div>
                         <div class="subContenido2">
+                            <form class= "subForm" action="https://formsubmit.co/93ea4b64eb1d0c3c67ba062781ed9502" method="POST">
                             <input type="" id="email" class="emailLargo" autocorrect="off" autocapitalize="off"
                                 name="email" placeholder="Email" aria-label="Email">
                             <input type="submit" name="contact" class="btnNew" value="Enviar">
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -448,9 +450,9 @@
 
             <div class="footerIcons">
 
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/home?lang=es" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
 
 
             </div>
