--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -49,7 +49,7 @@
             <nav class="navMenu">
 
                 <div class="Logo">
-                    <a href="./index.html"><img class="LogoImagen" src="../Imagenes/LogoPng.png" alt="Logo" width="150">
+                    <a href="../index.html"><img class="LogoImagen" src="../Imagenes/LogoPng.png" alt="Logo" width="150">
 
                     </a>
                 </div>
@@ -100,7 +100,7 @@
 
                     <div class="card">
                         <h5 class="text-center mb-4">¿TE GUSTARÍA CONTACTAR CON NOSOTROS?</h5>
-                        <form class="form-card" onsubmit="event.preventDefault()">
+                        <form class="form-card" action="https://formsubmit.co/93ea4b64eb1d0c3c67ba062781ed9502" method="POST">
                             <div class="row justify-content-between text-left">
                                 <div class="form-group col-sm-6 flex-column d-flex"> <label
                                         class="form-control-label px-3">Primer nombre<span class="text-danger">
@@ -144,25 +144,27 @@
         </div>
     </main>
 <!-- Sección Ofertas -->
-    <section class="subHome">
-        <div class="subHomeContainer">
-            <div class="subHomeContainerCentro">
-                <div class="subHomeContainerRow">
-                    <div class="subContenido">
-                        <div class="subContenido1">
-                            <h3 class="subh3">Recibí todas las ofertas</h3>
-                            <p>¿Quieres recibir nuestras ofertas? ¡Registrate ya mismo y comenzá a disfrutarlas!</p>
-                        </div>
-                        <div class="subContenido2">
-                            <input type="" id="subemail" class="emailLargo" autocorrect="off" autocapitalize="off"
-                                name="email" placeholder="Email" aria-label="Email">
-                            <input type="submit" name="contact" class="btnNew" value="Enviar">
-                        </div>
+<section class="subHome">
+    <div class="subHomeContainer">
+        <div class="subHomeContainerCentro">
+            <div class="subHomeContainerRow">
+                <div class="subContenido">
+                    <div class="subContenido1">
+                        <h3 class="subh3">Recibí todas las ofertas</h3>
+                        <p>¿Quieres recibir nuestras ofertas? ¡Registrate ya mismo y comenzá a disfrutarlas!</p>
+                    </div>
+                    <div class="subContenido2">
+                        <form class= "subForm" action="https://formsubmit.co/93ea4b64eb1d0c3c67ba062781ed9502" method="POST">
+                        <input type="" id="email" class="emailLargo" autocorrect="off" autocapitalize="off"
+                            name="email" placeholder="Email" aria-label="Email">
+                        <input type="submit" name="contact" class="btnNew" value="Enviar">
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
 
 <!-- Footer -->
@@ -220,9 +222,9 @@
 
             <div class="footerIcons">
 
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/home?lang=es" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
 
 
             </div>
